--- a/style.css
+++ b/style.css
@@ -45,15 +45,22 @@ img.zweefLinks {
 .rechts {
     width: 60%;
     float: right;
-    border: 2px solid black;
+    border: 3px double black;
+    padding: 4px;
+    background-color: lightgreen;
+    font-family:'Times New Roman', Times, serif;
+    margin-top: 23px;
+   
     
 }
 
 .links {
     width: 55%;
     float: left;
-    border: 2px solid black;
-    padding: 2px;
+    border: 3px double black;
+    padding: 4px;
+    background-color: lightcyan;
+    font-family:'Times New Roman', Times, serif
 
 }
 
