--- a/style.css
+++ b/style.css
@@ -57,6 +57,15 @@ img.zweefLinks {
     padding: 1px;
 }
 
+.plaatje {
+    float: left;
+    margin-top: 1px;
+    margin-left:8px;
+    overflow:hidden;
+    border: 3px dotted black;
+    height:190px;
+}
+
 .rechts {
     width: 60%;
     float: right;
