--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ html, body {
     height: 100%;
     padding: 0;
     background-color:tan;  
-    
     color: #050505;
     font: Verdana, Arial, Sans-Serif;
 }
@@ -57,13 +56,18 @@ img.zweefLinks {
     padding: 1px;
 }
 
+p.text1 {
+    border:2px dotted black;
+    
+}
+
 .plaatje {
     float: left;
-    margin-top: 1px;
+    margin-top: 7px;
     margin-left:8px;
     overflow:hidden;
     border: 3px dotted black;
-    height:190px;
+    width: 250px;
 }
 
 .rechts {
@@ -74,7 +78,6 @@ img.zweefLinks {
     background-color: lightblue;
     font-family:'Times New Roman', Times, serif;
     margin-top: 15px;
-   
     
 }
 
@@ -84,8 +87,11 @@ img.zweefLinks {
     border: 3px double black;
     padding: 5px;
     background-color: lightsteelblue;
-    font-family:'Times New Roman', Times, serif
-    
+    font-family:'Times New Roman', Times, serif;
+    margin-bottom: 2px;
+    margin-top:5px;
+    margin-right:60px;
+    margin-left: 5px;
 
 }
 
