--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ main {
     margin: 0 auto;
     width: 700px;
     position: relative;
-    background-color:tan;
+    background-color:ta;
 }
 
 
@@ -50,15 +50,13 @@ footer {
 /* specifieke stijlen */
 
 img.zweefLinks {
-    float: right;
+    float: left;
     margin-right: 6px;
     margin-top: 5px;
     border: 3px dotted black;
     padding: 1px;
     width: 240px;
-    
-    
-}
+    }
 
 p.text1 { 
     border: 3px double black;
