--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
     height: 100%;
     padding: 0;
     background-color:tan;  
-    color: #050505;
+    color: #030000;
     font: Verdana, Arial, Sans-Serif;
 }
 
@@ -33,7 +33,7 @@ article {
 
 
 header {
-    color: rgb(5, 5, 5);
+    color: rgb(172, 32, 32);
     text-align: center;
 }
 
@@ -48,12 +48,11 @@ footer {
 
 
 /* specifieke stijlen */
-
+/* homepage */
 img.zweefLinks {
-    float: left;
+    float: right;
     margin-right: 6px;
     margin-top: 5px;
-    border: 3px dotted black;
     padding: 1px;
     width: 240px;
     }
@@ -63,17 +62,17 @@ p.text1 {
     padding: 4px;
     background-color:rgb(142, 214, 190);
     width:60%;
-    float:none;
+    float:left;
     margin-top:5px;
     margin-left:20px;
     text-align:center;
 }
 
+/* CSS voor de subpaginas */
 .plaatje {
     float: left;
     margin-top: 7px;
     margin-left:8px;
-    border: 3px dotted black;
     width: 250px;
 }
 
@@ -83,7 +82,6 @@ p.text1 {
     margin-top:-285px;
     margin-bottom:60px;
     margin-right:3px;
-    border: 3px dotted black;
     width: 285px;
 }
 
@@ -118,6 +116,7 @@ p.text1 {
     
 }
 
+/* link */
 a {
     color: red;
     text-decoration:underline;
@@ -134,7 +133,7 @@ nav ul {
     list-style-type: none;
     margin: auto;
     padding: 0;
-    background-color: #050505;
+    background-color: #a32a2a;
     overflow: hidden;
 }
 
