--- a/style.css
+++ b/style.css
@@ -18,9 +18,6 @@ html, body {
     font: Verdana, Arial, Sans-Serif;
 }
 
-
-
-
 main {
     margin: 0 auto;
     width: 700px;
@@ -52,12 +49,28 @@ footer {
 /* specifieke stijlen */
 /* homepage */
 img.zweeflinks {
-    float: right;
-    margin-right: 6px;
-    margin-top: 5px;
+    float: left;
+    margin-left:20px;
+    margin-top: 25px;
     padding: 1px;
-    width: 240px;
+    height:150px;
     }
+
+img.zweefrechts {
+    float: right;
+    margin-left:15px;
+    margin-top: 26px;
+    padding: 1px;
+    height:150px;
+    }    
+
+img.homepage {
+    float: right;
+    margin-right: 15px;
+    margin-top:50px;
+    padding: 1px;
+    width: 240px
+}
 
 p.text1 { 
     border: 3px double black;
@@ -65,7 +78,7 @@ p.text1 {
     background-color:rgb(142, 214, 190);
     width:60%;
     float:left;
-    margin-top:10px;
+    margin-top:15px;
     margin-left:20px;
     text-align:center;
 }
