--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ p.text1 {
 
 details {
     color:red;
+    font-family:Arial, Helvetica, sans-serif
 }
 
 .smalltext {
@@ -178,12 +179,12 @@ nav li a {
 }
 
 nav li a:hover {
-    background-color: #aaaaaa;
+    background-color: #ca2727;
 }
 
 nav li a.active {
-    background-color: rgb(132, 102, 243);
-    border: 2px solid white;
+    background-color: rgb(104, 50, 50);
+    border: 2px solid rgb(255, 255, 255);
 }
 
 
